[package]
name = "nft-demo"
version = "0.1.0"
authors = ["Luis Mastrangelo <luismastrangelo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
near-sdk = "=3.1.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

